re PR libgomp/26308 (libgomp bootstrap failure on Tru64 UNIX V4.0F)

PR libgomp/26308
	* config/posix/lock.c (_XOPEN_SOURCE): Don't define on Tru64 UNIX.

From-SVN: r126208